changes in URL Calling for feedback method and for others..

--- a/eShopKart/bcConfig.plist
+++ b/eShopKart/bcConfig.plist
@@ -18,6 +18,8 @@
 		<string>webservices/user_logout/</string>
 		<key>search</key>
 		<string>webservices/search/</string>
+		<key>sendFeedback</key>
+		<string>webservices/user_feedback</string>
 	</dict>
 </dict>
 </plist>
