Add Multiple Addresses, delete_address and get_address

--- a/eShopKart/bcConfig.plist
+++ b/eShopKart/bcConfig.plist
@@ -36,6 +36,8 @@
 		<string>webservices/add_address/</string>
 		<key>get_address</key>
 		<string>webservices/get_address/</string>
+		<key>delete_address</key>
+		<string>webservices/delete_address/</string>
 	</dict>
 </dict>
 </plist>
