--- a/eShopKart/bcConfig.plist
+++ b/eShopKart/bcConfig.plist
@@ -38,6 +38,10 @@
 		<string>webservices/get_address/</string>
 		<key>delete_address</key>
 		<string>webservices/delete_address/</string>
+		<key>get_product_details</key>
+		<string>webservices/get_product_details/</string>
+		<key>update_address</key>
+		<string>webservices/update_address/</string>
 	</dict>
 </dict>
 </plist>
